# SIIAPI

./: .dockerignore  .env.example  .lintignore  AGENTS.md  Dockerfile  Makefile  README.md  dev.sh  installed-requirements.txt  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
alembic/: README.md  env.py
alembic/versions/: ef57b7e8867c_initial_migration.py
app/: main.py
app/api/: __init__.py  routes.py
app/api/dependencies/: auth.py
app/api/schemas/: __init__.py  info.py  pagination.py
app/core/: config.py  database.py  exceptions.py  migrations.py  security.py  seed.py
app/modules/aula/api/: dependencies.py  routes.py
app/modules/aula/models/: __init__.py  aula.py
app/modules/aula/repositories/: aula_repository.py
app/modules/aula/schemas/: __init__.py  aula.py
app/modules/aula/services/: aula_service.py
app/modules/auth/api/: dependencies.py  refresh_token_routes.py  routes.py
app/modules/auth/models/: refresh_token.py
app/modules/auth/repositories/: refresh_token_repository.py
app/modules/auth/schemas/: __init__.py  auth.py  refresh_token.py  tokens.py
app/modules/auth/services/: auth_service.py  refresh_token_service.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  MIGRATIONS.md  SEEDING.md
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/auth/: test_auth_service.py
tests/unit/core/: test_config.py  test_security.py
tests/unit/modules/: test_generic_module.py
tests/unit/users/: test_user_repository.py  test_user_service.py
(+67 files in other folders)
